@@ -25,22 +25,32 @@ import com.fasterxml.jackson.databind.JsonDeserializer;
 import com.fasterxml.jackson.databind.JsonSerializer;
 import com.fasterxml.jackson.databind.module.SimpleModule;
 import com.google.common.collect.Iterables;
-import de.unijena.bioinf.storage.db.nosql.Filter;
-import de.unijena.bioinf.storage.db.nosql.Index;
-import de.unijena.bioinf.storage.db.nosql.IndexType;
 import de.unijena.bioinf.storage.db.nosql.*;
+import de.unijena.bioinf.storage.db.nosql.nitrite.joining.JoinedReflectionIterable;
+import de.unijena.bioinf.storage.db.nosql.nitrite.projection.InjectedDocumentStream;
+import de.unijena.bioinf.storage.db.nosql.nitrite.projection.InjectedObjectStream;
+import de.unijena.bioinf.storage.db.nosql.nitrite.projection.OptFieldDocumentStream;
 import de.unijena.bioinf.storage.db.nosql.utils.PKSuppliers;
+import lombok.Getter;
 import org.apache.commons.compress.utils.Lists;
 import org.apache.commons.lang3.ClassUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.commons.lang3.tuple.Triple;
-import org.dizitart.no2.*;
-import org.dizitart.no2.filters.Filters;
-import org.dizitart.no2.mapper.JacksonMapper;
-import org.dizitart.no2.objects.ObjectFilter;
-import org.dizitart.no2.objects.ObjectRepository;
-import org.dizitart.no2.objects.filters.ObjectFilters;
-import org.dizitart.no2.util.ObjectUtils;
+import org.dizitart.no2.Nitrite;
+import org.dizitart.no2.collection.*;
+import org.dizitart.no2.collection.events.EventType;
+import org.dizitart.no2.common.PersistentCollection;
+import org.dizitart.no2.common.RecordStream;
+import org.dizitart.no2.common.WriteResult;
+import org.dizitart.no2.common.mapper.JacksonMapperModule;
+import org.dizitart.no2.common.mapper.NitriteMapper;
+import org.dizitart.no2.common.processors.ProcessorChain;
+import org.dizitart.no2.filters.FluentFilter;
+import org.dizitart.no2.filters.NitriteFilter;
+import org.dizitart.no2.index.IndexDescriptor;
+import org.dizitart.no2.index.IndexOptions;
+import org.dizitart.no2.mvstore.MVStoreModule;
+import org.dizitart.no2.repository.ObjectRepository;
 
 import javax.annotation.Nullable;
 import java.io.IOException;
@@ -52,10 +62,10 @@ import java.nio.file.Path;
 import java.util.*;
 import java.util.concurrent.Callable;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
+import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.function.Supplier;
-
-import static org.dizitart.no2.exceptions.ErrorMessage.*;
-import static org.dizitart.no2.objects.filters.ObjectFilters.eq;
+import java.util.stream.StreamSupport;
 
 public class NitriteDatabase implements Database<Document> {
     protected Path file;
@@ -63,7 +73,8 @@ public class NitriteDatabase implements Database<Document> {
     // NITRITE
     private final Nitrite db;
 
-    private final JacksonMapper nitriteMapper;
+    @Getter
+    private final NitriteMapper nitriteMapper;
 
     private final Map<Class<?>, ObjectRepository<?>> repositories = Collections.synchronizedMap(new HashMap<>());
 
@@ -72,6 +83,8 @@ public class NitriteDatabase implements Database<Document> {
     private final Map<Class<?>, Field> primaryKeyFields = Collections.synchronizedMap(new HashMap<>());
 
     private final Map<Class<?>, Supplier<?>> primaryKeySuppliers = Collections.synchronizedMap(new HashMap<>());
+
+    private final Map<String, NitriteCollection> collections = Collections.synchronizedMap(new HashMap<>());
 
     private final Map<String, Set<String>> optionalCollectionFields = Collections.synchronizedMap(new HashMap<>());
 
@@ -92,18 +105,7 @@ public class NitriteDatabase implements Database<Document> {
         this.initCollections(meta);
         this.initRepositories(meta);
         this.initOptionalFields(meta);
-        try {
-            Field cField = Nitrite.class.getDeclaredField("context");
-            cField.setAccessible(true);
-            NitriteContext context = (NitriteContext) cField.get(this.db);
-            this.nitriteMapper = (JacksonMapper) context.getNitriteMapper();
-        } catch (NoSuchFieldException | IllegalAccessException e) {
-            throw new IOException(e);
-        }
-    }
-
-    public JacksonMapper getJacksonMapper() {
-        return this.nitriteMapper;
+        this.nitriteMapper = this.db.getConfig().nitriteMapper();
     }
 
     private Nitrite initDB(Path file, Metadata meta) {
@@ -114,12 +116,15 @@ public class NitriteDatabase implements Database<Document> {
         for (Map.Entry<Class<?>, JsonDeserializer<?>> entry : meta.deserializers.entrySet()) {
             addDeserializer(module, entry.getKey(), entry.getValue());
         }
-        return Nitrite.builder().filePath(file.toFile()).registerModule(module).compressed().openOrCreate();
+        MVStoreModule storeModule = MVStoreModule.withConfig().filePath(file.toFile()).build();
+
+        return Nitrite.builder().loadModule(storeModule).loadModule(new JacksonMapperModule(module)).openOrCreate();
     }
 
     private void initCollections(Metadata meta) {
         for (String name : meta.collectionIndices.keySet()) {
             NitriteCollection collection = this.db.getCollection(name);
+            this.collections.put(name, collection);
             initIndex(meta.collectionIndices.get(name), collection);
         }
     }
@@ -191,49 +196,67 @@ public class NitriteDatabase implements Database<Document> {
 
         }
         if (!repository.hasIndex(pkName)) {
-            repository.createIndex(pkName, IndexOptions.indexOptions(org.dizitart.no2.IndexType.Unique));
+            repository.createIndex(IndexOptions.indexOptions(org.dizitart.no2.index.IndexType.UNIQUE), pkName);
         }
     }
 
     private <Repo extends PersistentCollection<?>> void initIndex(Index[] indices, Repo repository) {
-        Collection<org.dizitart.no2.Index> repoIndices = repository.listIndices();
-        List<org.dizitart.no2.Index> toDrop = new ArrayList<>();
+        List<IndexDescriptor> toDrop = new ArrayList<>();
         List<Index> toBuild = new ArrayList<>();
+
+        Map<Set<String>, IndexDescriptor> rI = new HashMap<>();
+        Map<Set<String>, Index> nI = new HashMap<>();
+
+        for (IndexDescriptor descriptor : repository.listIndices()) {
+            rI.put(new HashSet<>(descriptor.getFields().getFieldNames()), descriptor);
+        }
         for (Index index : indices) {
-            found:
-            {
-                for (org.dizitart.no2.Index repoIndex : repoIndices) {
-                    if (Objects.equals(repoIndex.getField(), index.getField())) {
-                        org.dizitart.no2.IndexType repoType = repoIndex.getIndexType();
-                        IndexType iType = index.getType();
-                        if ((repoType == org.dizitart.no2.IndexType.Unique && iType != IndexType.UNIQUE) ||
-                                (repoType == org.dizitart.no2.IndexType.NonUnique && iType != IndexType.NON_UNIQUE) ||
-                                (repoType == org.dizitart.no2.IndexType.Fulltext && iType != IndexType.FULL_TEXT)) {
-                            toDrop.add(repoIndex);
-                            toBuild.add(index);
-                        }
-                        break found;
-                    }
-                }
+            Set<String> key = new HashSet<>(Arrays.asList(index.getFields()));
+            if (nI.containsKey(key)) {
+                throw new IllegalArgumentException("Duplicate index: " + String.join(",", key));
+            }
+            nI.put(key, index);
+        }
+
+        Set<Set<String>> intersection = new HashSet<>(rI.keySet());
+        intersection.retainAll(nI.keySet());
+
+        Set<Set<String>> dropSet = new HashSet<>(rI.keySet());
+        dropSet.removeAll(nI.keySet());
+
+        Set<Set<String>> addSet = new HashSet<>(nI.keySet());
+        addSet.removeAll(rI.keySet());
+
+        dropSet.stream().map(rI::get).forEach(toDrop::add);
+        addSet.stream().map(nI::get).forEach(toBuild::add);
+
+        // compare index types
+        for (Set<String> key : intersection) {
+            IndexDescriptor repoIndex = rI.get(key);
+            Index index = nI.get(key);
+
+            String repoType = repoIndex.getIndexType();
+            IndexType iType = index.getType();
+            if ((Objects.equals(repoType, org.dizitart.no2.index.IndexType.UNIQUE) && iType != IndexType.UNIQUE) ||
+                        (Objects.equals(repoType, org.dizitart.no2.index.IndexType.NON_UNIQUE) && iType != IndexType.NON_UNIQUE) ||
+                        (Objects.equals(repoType, org.dizitart.no2.index.IndexType.FULL_TEXT) && iType != IndexType.FULL_TEXT)) {
+                toDrop.add(repoIndex);
                 toBuild.add(index);
             }
         }
 
-        for (org.dizitart.no2.Index index : toDrop) {
-            repository.dropIndex(index.getField());
+        for (IndexDescriptor index : toDrop) {
+            repository.dropIndex(index.getFields().getFieldNames().toArray(String[]::new));
         }
 
         for (Index index : toBuild) {
             switch (index.getType()) {
-                case UNIQUE:
-                    repository.createIndex(index.getField(), IndexOptions.indexOptions(org.dizitart.no2.IndexType.Unique));
-                    break;
-                case NON_UNIQUE:
-                    repository.createIndex(index.getField(), IndexOptions.indexOptions(org.dizitart.no2.IndexType.NonUnique));
-                    break;
-                case FULL_TEXT:
-                    repository.createIndex(index.getField(), IndexOptions.indexOptions(org.dizitart.no2.IndexType.Fulltext));
-                    break;
+                case UNIQUE ->
+                        repository.createIndex(IndexOptions.indexOptions(org.dizitart.no2.index.IndexType.UNIQUE), index.getFields());
+                case NON_UNIQUE ->
+                        repository.createIndex(IndexOptions.indexOptions(org.dizitart.no2.index.IndexType.NON_UNIQUE), index.getFields());
+                case FULL_TEXT ->
+                        repository.createIndex(IndexOptions.indexOptions(org.dizitart.no2.index.IndexType.FULL_TEXT), index.getFields());
             }
         }
     }
@@ -320,42 +343,61 @@ public class NitriteDatabase implements Database<Document> {
 
     private NitriteCollection getCollection(String name) throws IOException {
         //collection of repos are created on demand, so we have to check both
-        if (!db.hasCollection(name) && !db.listRepositories().contains(name)) {
-            throw new IOException(name + " is not registered.");
+        if (!collections.containsKey(name)) {
+            if (!db.hasCollection(name) && !db.listRepositories().contains(name)) {
+                throw new IOException(name + " is not registered.");
+            }
+
+            return db.getCollection(name);
         }
 
-        return db.getCollection(name);
+        return collections.get(name);
+    }
+
+    @SuppressWarnings("unchecked")
+    private <T> T maybeProject(Class<T> clazz, Document document, String[] withOptionalFields) {
+        Set<String> omittedFields = new HashSet<>(optionalRepoFields.containsKey(clazz) ? optionalRepoFields.get(clazz) : Set.of());
+        omittedFields.removeAll(new HashSet<>(Arrays.asList(withOptionalFields)));
+        Document projected = OptFieldDocumentStream.project(document, omittedFields, new ProcessorChain());
+        return (T) nitriteMapper.tryConvert(projected, clazz);
+    }
+
+    private Document maybeProjectDocument(String collectionName, Document document, String[] withOptionalFields) {
+        Set<String> omittedFields = new HashSet<>(optionalCollectionFields.containsKey(collectionName) ? optionalCollectionFields.get(collectionName) : Set.of());
+        omittedFields.removeAll(new HashSet<>(Arrays.asList(withOptionalFields)));
+        return OptFieldDocumentStream.project(document, omittedFields, new ProcessorChain());
     }
 
     private <T> Iterable<T> maybeProject(Class<T> clazz, @Nullable Filter filter, @Nullable FindOptions findOptions, String[] withOptionalFields) throws IOException {
-        if (optionalRepoFields.containsKey(clazz)) {
-            Set<String> omittedFields = new HashSet<>(optionalRepoFields.get(clazz));
-            omittedFields.removeAll(new HashSet<>(Arrays.asList(withOptionalFields)));
-            if (!omittedFields.isEmpty()) {
-                Iterable<Document> result = doFindDocument(getRepository(clazz).getDocumentCollection(), filter, findOptions);
-                return new ProjectingIterable<>(clazz, result, omittedFields, nitriteMapper);
-            }
-        }
-        return doFind(clazz, filter, findOptions);
+        Set<String> omittedFields = new HashSet<>(optionalRepoFields.containsKey(clazz) ? optionalRepoFields.get(clazz) : Set.of());
+        omittedFields.removeAll(new HashSet<>(Arrays.asList(withOptionalFields)));
+
+        DocumentCursor cursor = doFindDocument(getRepository(clazz).getDocumentCollection(), filter, findOptions);
+        RecordStream<Document> recordStream = CustomDocumentStream.of(cursor).project(omittedFields);
+        return new CustomObjectCursor<>(nitriteMapper, recordStream, cursor.getFindPlan(), clazz);
     }
 
-    private Iterable<Document> maybeProjectDocuments(String collectionName, @Nullable Filter filter, @Nullable FindOptions findOptions, String[] withOptionalFields) throws IOException {
-        Iterable<Document> result = doFindDocument(getCollection(collectionName), filter, findOptions);
-        if (optionalCollectionFields.containsKey(collectionName)) {
-            Set<String> omittedFields = new HashSet<>(optionalCollectionFields.get(collectionName));
-            omittedFields.removeAll(new HashSet<>(Arrays.asList(withOptionalFields)));
-            if (!omittedFields.isEmpty()) {
-                return new ProjectingDocumentIterable(result, omittedFields);
-            }
-        }
-        return result;
+    private <T> Iterable<Document> maybeProjectWithoutConvert(Class<T> clazz, @Nullable Filter filter, @Nullable FindOptions findOptions, String[] withOptionalFields) throws IOException {
+        Set<String> omittedFields = new HashSet<>(optionalRepoFields.containsKey(clazz) ? optionalRepoFields.get(clazz) : Set.of());
+        omittedFields.removeAll(new HashSet<>(Arrays.asList(withOptionalFields)));
+
+        DocumentCursor cursor = doFindDocument(getRepository(clazz).getDocumentCollection(), filter, findOptions);
+        return CustomDocumentStream.of(cursor).project(omittedFields);
+    }
+
+    private RecordStream<Document> maybeProjectDocuments(String collectionName, @Nullable Filter filter, @Nullable FindOptions findOptions, String[] withOptionalFields) throws IOException {
+        Set<String> omittedFields = new HashSet<>(optionalCollectionFields.containsKey(collectionName) ? optionalCollectionFields.get(collectionName) : Set.of());
+        omittedFields.removeAll(new HashSet<>(Arrays.asList(withOptionalFields)));
+
+        DocumentCursor cursor = doFindDocument(getCollection(collectionName), filter, findOptions);
+        return CustomDocumentStream.of(cursor).project(omittedFields);
     }
 
     private <T> Iterable<T> doFind(Class<T> clazz, @Nullable Filter filter, @Nullable FindOptions findOptions) throws IOException {
         if (filter != null && findOptions != null) {
-            return getRepository(clazz).find(getObjectFilter(filter), findOptions);
+            return getRepository(clazz).find(getFilter(filter), findOptions);
         } else if (filter != null) {
-            return getRepository(clazz).find(getObjectFilter(filter));
+            return getRepository(clazz).find(getFilter(filter));
         } else if (findOptions != null) {
             return getRepository(clazz).find(findOptions);
         } else {
@@ -363,7 +405,7 @@ public class NitriteDatabase implements Database<Document> {
         }
     }
 
-    private Iterable<Document> doFindDocument(NitriteCollection collection, @Nullable Filter filter, @Nullable FindOptions findOptions) throws IOException {
+    private DocumentCursor doFindDocument(NitriteCollection collection, @Nullable Filter filter, @Nullable FindOptions findOptions) throws IOException {
         if (filter != null && findOptions != null) {
             return collection.find(getFilter(filter), findOptions);
         } else if (filter != null) {
@@ -389,7 +431,7 @@ public class NitriteDatabase implements Database<Document> {
             Field pkField = primaryKeyFields.get(clazz);
             if (getPrimaryKeyValue(object, pkField).isEmpty()) {
                 if (!this.primaryKeySuppliers.containsKey(clazz)) {
-                    throw new IOException(ID_CAN_NOT_BE_NULL.getMessage());
+                    throw new IOException("id can not be null");
                 }
                 Object pk = this.primaryKeySuppliers.get(clazz).get();
                 pkField.set(object, pk);
@@ -410,7 +452,7 @@ public class NitriteDatabase implements Database<Document> {
             for (T object : triple.getLeft()) {
                 if (getPrimaryKeyValue(object, pkField).isEmpty()) {
                     if (primaryKeySupplier == null) {
-                        throw new IOException(ID_CAN_NOT_BE_NULL.getMessage());
+                        throw new IOException("id can not be null");
                     }
                     pkField.set(object, primaryKeySupplier.get());
                 }
@@ -423,7 +465,11 @@ public class NitriteDatabase implements Database<Document> {
     public int insert(String collectionName, Document document) throws IOException {
         return this.write(() -> {
             NitriteCollection collection = this.getCollection(collectionName);
-            return collection.insert(document).getAffectedCount();
+            WriteResult result = collection.insert(document);
+            if (result.iterator().hasNext()) {
+                document.put("_id", result.iterator().next().getIdValue());
+            }
+            return result.getAffectedCount();
         });
     }
 
@@ -432,7 +478,14 @@ public class NitriteDatabase implements Database<Document> {
         return this.write(() -> {
             NitriteCollection collection = this.getCollection(collectionName);
             Document[] docs = Iterables.toArray(documents, Document.class);
-            return collection.insert(docs).getAffectedCount();
+            WriteResult result = collection.insert(docs);
+            List<String> ids = StreamSupport.stream(result.spliterator(), false).map(NitriteId::getIdValue).toList();
+            if (ids.size() == docs.length) {
+                for (int i = 0; i < docs.length; i++) {
+                    docs[i].put("_id", ids.get(i));
+                }
+            }
+            return result.getAffectedCount();
         });
     }
 
@@ -440,9 +493,9 @@ public class NitriteDatabase implements Database<Document> {
     public <T> int upsert(T object) throws IOException {
         return this.write(() -> {
             ObjectRepository<T> repo = this.getRepository(object);
-            Pair<Object, ObjectFilter> filter = createUniqueFilter(object, primaryKeyFields.get(object.getClass()));
+            Pair<Object, NitriteFilter> filter = createUniqueFilter(object, primaryKeyFields.get(object.getClass()));
             if (filter.getLeft() != null) {
-                return repo.update(filter.getRight(), object, true).getAffectedCount();
+                return repo.update(filter.getRight(), object, UpdateOptions.updateOptions(true)).getAffectedCount();
             } else {
                 return insert(object);
             }
@@ -459,9 +512,9 @@ public class NitriteDatabase implements Database<Document> {
             int count = 0;
             List<T> toInsert = new ArrayList<>();
             for (T o : triple.getLeft()) {
-                Pair<Object, ObjectFilter> filter = createUniqueFilter(o, primaryKeyFields.get(o.getClass()));
+                Pair<Object, NitriteFilter> filter = createUniqueFilter(o, primaryKeyFields.get(o.getClass()));
                 if (filter.getLeft() != null) {
-                    count += triple.getMiddle().update(filter.getRight(), o, true).getAffectedCount();
+                    count += triple.getMiddle().update(filter.getRight(), o, UpdateOptions.updateOptions(true)).getAffectedCount();
                 } else {
                     toInsert.add(o);
                 }
@@ -496,7 +549,7 @@ public class NitriteDatabase implements Database<Document> {
     @Override
     public <T> Optional<T> getByPrimaryKey(Object primaryKey, Class<T> clazz, String... withOptionalFields) throws IOException {
         return this.read(() -> {
-            List<T> results = Lists.newArrayList(maybeProject(clazz, Filter.build().eq(this.primaryKeyFields.get(clazz).getName(), primaryKey), null, withOptionalFields).iterator());
+            List<T> results = Lists.newArrayList(maybeProject(clazz, Filter.where(this.primaryKeyFields.get(clazz).getName()).eq(primaryKey), null, withOptionalFields).iterator());
             if (results.isEmpty()) {
                 return Optional.empty();
             } else if (results.size() > 1) {
@@ -513,14 +566,7 @@ public class NitriteDatabase implements Database<Document> {
             if (document == null) {
                 return Optional.empty();
             }
-            if (optionalCollectionFields.containsKey(collectionName)) {
-                Set<String> omittedFields = new HashSet<>(optionalCollectionFields.get(collectionName));
-                omittedFields.removeAll(new HashSet<>(Arrays.asList(withOptionalFields)));
-                if (!omittedFields.isEmpty()) {
-                    return Optional.of(ProjectingDocumentIterable.project(document, omittedFields));
-                }
-            }
-            return Optional.of(document);
+            return Optional.of(maybeProjectDocument(collectionName, document, withOptionalFields));
         });
     }
 
@@ -531,17 +577,17 @@ public class NitriteDatabase implements Database<Document> {
 
     @Override
     public <T> Iterable<T> find(Filter filter, Class<T> clazz, int offset, int pageSize, String... withOptionalFields) throws IOException {
-        return this.read(() -> maybeProject(clazz, filter, FindOptions.limit(offset, pageSize), withOptionalFields));
+        return this.read(() -> maybeProject(clazz, filter, FindOptions.skipBy(offset).limit(pageSize), withOptionalFields));
     }
 
     @Override
     public <T> Iterable<T> find(Filter filter, Class<T> clazz, String sortField, SortOrder sortOrder, String... withOptionalFields) throws IOException {
-        return this.read(() -> maybeProject(clazz, filter, FindOptions.sort(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.SortOrder.Ascending : org.dizitart.no2.SortOrder.Descending), withOptionalFields));
+        return this.read(() -> maybeProject(clazz, filter, FindOptions.orderBy(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.common.SortOrder.Ascending : org.dizitart.no2.common.SortOrder.Descending), withOptionalFields));
     }
 
     @Override
     public <T> Iterable<T> find(Filter filter, Class<T> clazz, int offset, int pageSize, String sortField, SortOrder sortOrder, String... withOptionalFields) throws IOException {
-        return this.read(() -> maybeProject(clazz, filter, FindOptions.sort(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.SortOrder.Ascending : org.dizitart.no2.SortOrder.Descending).thenLimit(offset, pageSize), withOptionalFields));
+        return this.read(() -> maybeProject(clazz, filter, FindOptions.orderBy(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.common.SortOrder.Ascending : org.dizitart.no2.common.SortOrder.Descending).skip(offset).limit(pageSize), withOptionalFields));
     }
 
     @Override
@@ -551,17 +597,17 @@ public class NitriteDatabase implements Database<Document> {
 
     @Override
     public Iterable<Document> find(String collectionName, Filter filter, int offset, int pageSize, String... withOptionalFields) throws IOException {
-        return this.read(() -> maybeProjectDocuments(collectionName, filter, FindOptions.limit(offset, pageSize), withOptionalFields));
+        return this.read(() -> maybeProjectDocuments(collectionName, filter, FindOptions.skipBy(offset).limit(pageSize), withOptionalFields));
     }
 
     @Override
     public Iterable<Document> find(String collectionName, Filter filter, String sortField, SortOrder sortOrder, String... withOptionalFields) throws IOException {
-        return this.read(() -> maybeProjectDocuments(collectionName, filter, FindOptions.sort(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.SortOrder.Ascending : org.dizitart.no2.SortOrder.Descending), withOptionalFields));
+        return this.read(() -> maybeProjectDocuments(collectionName, filter, FindOptions.orderBy(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.common.SortOrder.Ascending : org.dizitart.no2.common.SortOrder.Descending), withOptionalFields));
     }
 
     @Override
     public Iterable<Document> find(String collectionName, Filter filter, int offset, int pageSize, String sortField, SortOrder sortOrder, String... withOptionalFields) throws IOException {
-        return this.read(() -> maybeProjectDocuments(collectionName, filter, FindOptions.sort(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.SortOrder.Ascending : org.dizitart.no2.SortOrder.Descending).thenLimit(offset, pageSize), withOptionalFields));
+        return this.read(() -> maybeProjectDocuments(collectionName, filter, FindOptions.orderBy(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.common.SortOrder.Ascending : org.dizitart.no2.common.SortOrder.Descending).skip(offset).limit(pageSize), withOptionalFields));
     }
 
     @Override
@@ -571,17 +617,17 @@ public class NitriteDatabase implements Database<Document> {
 
     @Override
     public <T> Iterable<T> findAll(Class<T> clazz, int offset, int pageSize, String... withOptionalFields) throws IOException {
-        return this.read(() -> maybeProject(clazz, null, FindOptions.limit(offset, pageSize), withOptionalFields));
+        return this.read(() -> maybeProject(clazz, null, FindOptions.skipBy(offset).limit(pageSize), withOptionalFields));
     }
 
     @Override
     public <T> Iterable<T> findAll(Class<T> clazz, String sortField, SortOrder sortOrder, String... withOptionalFields) throws IOException {
-        return this.read(() -> maybeProject(clazz, null, FindOptions.sort(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.SortOrder.Ascending : org.dizitart.no2.SortOrder.Descending), withOptionalFields));
+        return this.read(() -> maybeProject(clazz, null, FindOptions.orderBy(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.common.SortOrder.Ascending : org.dizitart.no2.common.SortOrder.Descending), withOptionalFields));
     }
 
     @Override
     public <T> Iterable<T> findAll(Class<T> clazz, int offset, int pageSize, String sortField, SortOrder sortOrder, String... withOptionalFields) throws IOException {
-        return this.read(() -> maybeProject(clazz, null, FindOptions.sort(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.SortOrder.Ascending : org.dizitart.no2.SortOrder.Descending).thenLimit(offset, pageSize), withOptionalFields));
+        return this.read(() -> maybeProject(clazz, null, FindOptions.orderBy(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.common.SortOrder.Ascending : org.dizitart.no2.common.SortOrder.Descending).skip(offset).limit(pageSize), withOptionalFields));
     }
 
     @Override
@@ -591,217 +637,216 @@ public class NitriteDatabase implements Database<Document> {
 
     @Override
     public Iterable<Document> findAll(String collectionName, int offset, int pageSize, String... withOptionalFields) throws IOException {
-        return this.read(() -> maybeProjectDocuments(collectionName, null, FindOptions.limit(offset, pageSize), withOptionalFields));
+        return this.read(() -> maybeProjectDocuments(collectionName, null, FindOptions.skipBy(offset).limit(pageSize), withOptionalFields));
     }
 
     @Override
     public Iterable<Document> findAll(String collectionName, String sortField, SortOrder sortOrder, String... withOptionalFields) throws IOException {
-        return this.read(() -> maybeProjectDocuments(collectionName, null, FindOptions.sort(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.SortOrder.Ascending : org.dizitart.no2.SortOrder.Descending), withOptionalFields));
+        return this.read(() -> maybeProjectDocuments(collectionName, null, FindOptions.orderBy(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.common.SortOrder.Ascending : org.dizitart.no2.common.SortOrder.Descending), withOptionalFields));
     }
 
     @Override
     public Iterable<Document> findAll(String collectionName, int offset, int pageSize, String sortField, SortOrder sortOrder, String... withOptionalFields) throws IOException {
-        return this.read(() -> maybeProjectDocuments(collectionName, null, FindOptions.sort(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.SortOrder.Ascending : org.dizitart.no2.SortOrder.Descending).thenLimit(offset, pageSize), withOptionalFields));
+        return this.read(() -> maybeProjectDocuments(collectionName, null, FindOptions.orderBy(sortField, (sortOrder == SortOrder.ASCENDING) ? org.dizitart.no2.common.SortOrder.Ascending : org.dizitart.no2.common.SortOrder.Descending).skip(offset).limit(pageSize), withOptionalFields));
     }
 
     @Override
     public <T> T injectOptionalFields(T object, String... optionalFields) throws IOException {
-        NitriteCollection collection = getRepository(object).getDocumentCollection();
-        return InjectingIterable.inject(object, new HashSet<>(Arrays.asList(optionalFields)), collection, primaryKeyFields.get(object.getClass()), nitriteMapper);
+        return InjectedObjectStream.inject(object, new HashSet<>(Arrays.asList(optionalFields)), getRepository(object.getClass()).getDocumentCollection(), primaryKeyFields.get(object.getClass()), nitriteMapper);
     }
 
     @Override
     public Document injectOptionalFields(String collectionName, Document document, String... optionalFields) throws IOException {
-        return InjectingDocumentIterable.inject(document, new HashSet<>(Arrays.asList(optionalFields)), getCollection(collectionName));
+        return InjectedDocumentStream.inject(document, new HashSet<>(Arrays.asList(optionalFields)), getCollection(collectionName), new ProcessorChain());
     }
 
     @Override
     public <T> Iterable<T> injectOptionalFields(Class<T> clazz, Iterable<T> objects, String... optionalFields) throws IOException {
-        if (objects instanceof ProjectingIterable<T>) {
-            ((ProjectingIterable<T>) objects).withOptionalFields(new HashSet<>(Arrays.asList(optionalFields)));
-            return objects;
-        } else {
-            return new InjectingIterable<>(objects, new HashSet<>(Arrays.asList(optionalFields)), getRepository(clazz), primaryKeyFields.get(clazz), nitriteMapper);
+        if (objects instanceof CustomObjectCursor<T> cursor) {
+            RecordStream<Document> documents = cursor.getRecordStream();
+            RecordStream<Document> injected = CustomDocumentStream.of(documents).inject(new HashSet<>(Arrays.asList(optionalFields)), getRepository(clazz).getDocumentCollection());
+            return new CustomObjectCursor<>(nitriteMapper, injected, cursor.getFindPlan(), clazz);
         }
+        return new InjectedObjectStream<>(objects, new HashSet<>(Arrays.asList(optionalFields)), getRepository(clazz).getDocumentCollection(), primaryKeyFields.get(clazz), nitriteMapper);
     }
 
     @Override
     public Iterable<Document> injectOptionalFields(String collectionName, Iterable<Document> documents, String... optionalFields) throws IOException {
-        if (documents instanceof ProjectingDocumentIterable) {
-            ((ProjectingDocumentIterable) documents).withOptionalFields(new HashSet<>(Arrays.asList(optionalFields)));
-            return documents;
+        return CustomDocumentStream.of(documents).inject(new HashSet<>(Arrays.asList(optionalFields)), getCollection(collectionName));
+    }
+
+    private <P, C> Iterable<P> join(Class<C> childClass, Iterable<P> parents, Function<Object, Iterable<Document>> children, String localField, String targetField) throws IOException {
+        if (parents instanceof CustomObjectCursor<P> cursor) {
+            RecordStream<Document> parentDocuments = cursor.getRecordStream();
+            return new CustomObjectCursor<>(nitriteMapper,
+                    CustomDocumentStream.of(parentDocuments).join(
+                            children,
+                            localField,
+                            targetField),
+                    cursor.getFindPlan(),
+                    cursor.getType());
         } else {
-            return new InjectingDocumentIterable(documents, new HashSet<>(Arrays.asList(optionalFields)), getCollection(collectionName));
+            return new JoinedReflectionIterable<>(childClass, parents, children, localField, targetField, nitriteMapper);
         }
     }
 
     @Override
     public <P, C> Iterable<P> joinAllChildren(Class<C> childClass, Iterable<P> parents, String localField, String foreignField, String targetField, String... withOptionalChildFields) throws IOException {
-        return new JoinedReflectionIterable<>(
-                childClass,
-                parents,
-                (localObject) -> {
-                    try {
-                        return maybeProjectDocuments(childClass.getName(), Filter.build().eq(foreignField, localObject), null, withOptionalChildFields);
-                    } catch (IOException e) {
-                        throw new RuntimeException(e);
-                    }
-                },
-                localField,
-                targetField,
-                nitriteMapper
-        );
+        return join(childClass, parents, (localObject) -> {
+            try {
+                return maybeProjectWithoutConvert(childClass, Filter.where(foreignField).eq(localObject), null, withOptionalChildFields);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }, localField, targetField);
     }
 
     @Override
     public <P, C> Iterable<P> joinChildren(Class<C> childClass, Filter childFilter, Iterable<P> parents, String localField, String foreignField, String targetField, String... withOptionalChildFields) throws IOException {
-        return new JoinedReflectionIterable<>(
-                childClass,
-                parents,
-                (localObject) -> {
-                    try {
-                        Filter cFilter = new Filter().and().eq(foreignField, localObject);
-                        cFilter.filterChain.addAll(childFilter.filterChain);
-                        return maybeProjectDocuments(childClass.getName(), cFilter, null, withOptionalChildFields);
-                    } catch (IOException e) {
-                        throw new RuntimeException(e);
-                    }
-                },
-                localField,
-                targetField,
-                nitriteMapper
-        );
+        return join(childClass, parents, (localObject) -> {
+            try {
+                Filter.FilterNode root = (childFilter instanceof Filter.FilterClause) ? (Filter.FilterNode) childFilter : childFilter.getParent();
+                while (root.getParent() != null)
+                    root = root.getParent();
+                Iterable<Document> result = maybeProjectWithoutConvert(childClass, Filter.and(childFilter, Filter.where(foreignField).eq(localObject)), null, withOptionalChildFields);
+                root.setParent(null);
+                return result;
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }, localField, targetField);
     }
 
-    @Override
-    public <T, P, C> Iterable<T> joinAllChildren(Class<T> targetClass, Class<C> childClass, Iterable<P> parents, String localField, String foreignField, String targetField, String... withOptionalChildFields) throws IOException {
-        if (parents instanceof org.dizitart.no2.objects.Cursor<P> pCursor) {
-            return new JoinedIterable<>(
-                    targetClass,
-                    pCursor,
-                    (localObject) -> {
-                        try {
-                            return maybeProjectDocuments(childClass.getName(), Filter.build().eq(foreignField, localObject), null, withOptionalChildFields);
-                        } catch (IOException e) {
-                            throw new RuntimeException(e);
-                        }
-                    },
-                    localField,
-                    targetField,
-                    nitriteMapper
-            );
-        } else {
-            throw new IllegalArgumentException("parents must be a org.dizitart.no2.objects.Cursor!");
-        }
-    }
-
-    @Override
-    public <T, P, C> Iterable<T> joinChildren(Class<T> targetClass, Class<C> childClass, Filter childFilter, Iterable<P> parents, String localField, String foreignField, String targetField, String... withOptionalChildFields) throws IOException {
-        if (parents instanceof org.dizitart.no2.objects.Cursor<P> pCursor) {
-            return new JoinedIterable<>(
-                    targetClass,
-                    pCursor,
-                    (localObject) -> {
-                        try {
-                            Filter cFilter = new Filter().and().eq(foreignField, localObject);
-                            cFilter.filterChain.addAll(childFilter.filterChain);
-                            return maybeProjectDocuments(childClass.getName(), cFilter, null, withOptionalChildFields);
-                        } catch (IOException e) {
-                            throw new RuntimeException(e);
-                        }
-                    },
-                    localField,
-                    targetField,
-                    nitriteMapper
-            );
-        } else {
-            throw new IllegalArgumentException("parents must be a org.dizitart.no2.objects.Cursor!");
-        }
-    }
+//    @Override
+//    public <T, P, C> Iterable<T> joinAllChildren(Class<T> targetClass, Class<C> childClass, Iterable<P> parents, String localField, String foreignField, String targetField, String... withOptionalChildFields) throws IOException {
+//        return null;
+////        if (parents instanceof org.dizitart.no2.objects.Cursor<P> pCursor) {
+////            return new JoinedIterable<>(
+////                    targetClass,
+////                    pCursor,
+////                    (localObject) -> {
+////                        try {
+////                            return maybeProjectDocuments(childClass.getName(), Filter.build().eq(foreignField, localObject), null, withOptionalChildFields);
+////                        } catch (IOException e) {
+////                            throw new RuntimeException(e);
+////                        }
+////                    },
+////                    localField,
+////                    targetField,
+////                    nitriteMapper
+////            );
+////        } else {
+////            throw new IllegalArgumentException("parents must be a org.dizitart.no2.objects.Cursor!");
+////        }
+//    }
+//
+//    @Override
+//    public <T, P, C> Iterable<T> joinChildren(Class<T> targetClass, Class<C> childClass, Filter childFilter, Iterable<P> parents, String localField, String foreignField, String targetField, String... withOptionalChildFields) throws IOException {
+//        return null;
+////        if (parents instanceof org.dizitart.no2.objects.Cursor<P> pCursor) {
+////            return new JoinedIterable<>(
+////                    targetClass,
+////                    pCursor,
+////                    (localObject) -> {
+////                        try {
+////                            Filter cFilter = new Filter().and().eq(foreignField, localObject);
+////                            cFilter.filterChain.addAll(childFilter.filterChain);
+////                            return maybeProjectDocuments(childClass.getName(), cFilter, null, withOptionalChildFields);
+////                        } catch (IOException e) {
+////                            throw new RuntimeException(e);
+////                        }
+////                    },
+////                    localField,
+////                    targetField,
+////                    nitriteMapper
+////            );
+////        } else {
+////            throw new IllegalArgumentException("parents must be a org.dizitart.no2.objects.Cursor!");
+////        }
+//    }
 
     @Override
     public Iterable<Document> joinAllChildren(String childCollectionName, Iterable<Document> parents, String localField, String foreignField, String targetField, String... withOptionalChildFields) throws IOException {
-        return () -> new JoinedDocumentIterator(
-                parents,
+        return CustomDocumentStream.of(parents).join(
                 (localObject) -> {
                     try {
-                        return find(childCollectionName, new Filter().eq(foreignField, localObject), withOptionalChildFields);
+                        return find(childCollectionName, Filter.where(foreignField).eq(localObject), withOptionalChildFields);
                     } catch (IOException e) {
                         throw new RuntimeException(e);
                     }
                 },
                 localField,
-                targetField
-        );
+                targetField);
     }
 
     @Override
     public Iterable<Document> joinChildren(String childCollectionName, Filter childFilter, Iterable<Document> parents, String localField, String foreignField, String targetField, String... withOptionalChildFields) throws IOException {
-        return () -> new JoinedDocumentIterator(
-                parents,
+        return CustomDocumentStream.of(parents).join(
                 (localObject) -> {
                     try {
-                        Filter cFilter = new Filter().and().eq(foreignField, localObject);
-                        cFilter.filterChain.addAll(childFilter.filterChain);
-                        return find(childCollectionName, cFilter, withOptionalChildFields);
+                        Filter.FilterNode root = (childFilter instanceof Filter.FilterClause) ? (Filter.FilterNode) childFilter : childFilter.getParent();
+                        while (root.getParent() != null)
+                            root = root.getParent();
+                        Iterable<Document> c = find(childCollectionName, Filter.and(childFilter, Filter.where(foreignField).eq(localObject)), withOptionalChildFields);
+                        root.setParent(null);
+                        return c;
                     } catch (IOException e) {
                         throw new RuntimeException(e);
                     }
                 },
                 localField,
-                targetField
-        );
+                targetField);
     }
 
     @Override
-    public <T> int count(Filter filter, Class<T> clazz) throws IOException {
+    public <T> long count(Filter filter, Class<T> clazz) throws IOException {
         return this.read(() -> {
             ObjectRepository<T> repo = this.getRepository(clazz);
-            ObjectFilter of = getObjectFilter(filter);
-            return repo.find(of).size();
+            NitriteFilter f = getFilter(filter);
+            return repo.find(f).size();
         });
     }
 
     @Override
-    public <T> int count(Filter filter, Class<T> clazz, int offset, int pageSize) throws IOException {
+    public <T> long count(Filter filter, Class<T> clazz, int offset, int pageSize) throws IOException {
         return this.read(() -> {
             ObjectRepository<T> repo = this.getRepository(clazz);
-            ObjectFilter of = getObjectFilter(filter);
-            return repo.find(of, FindOptions.limit(offset, pageSize)).size();
+            NitriteFilter f = getFilter(filter);
+            return repo.find(f, FindOptions.skipBy(offset).limit(pageSize)).size();
         });
     }
 
     @Override
-    public <T> int countAll(Class<T> clazz) throws IOException {
+    public <T> long countAll(Class<T> clazz) throws IOException {
         return this.read(() -> {
             ObjectRepository<T> repo = this.getRepository(clazz);
-            return repo.find().totalCount();
+            return repo.size();
         });
     }
 
     @Override
-    public int count(String collectionName, Filter filter) throws IOException {
+    public long count(String collectionName, Filter filter) throws IOException {
         return this.read(() -> {
             NitriteCollection collection = this.getCollection(collectionName);
-            org.dizitart.no2.Filter f = getFilter(filter);
+            NitriteFilter f = getFilter(filter);
             return collection.find(f).size();
         });
     }
 
     @Override
-    public int count(String collectionName, Filter filter, int offset, int pageSize) throws IOException {
+    public long count(String collectionName, Filter filter, int offset, int pageSize) throws IOException {
         return this.read(() -> {
             NitriteCollection collection = this.getCollection(collectionName);
-            org.dizitart.no2.Filter f = getFilter(filter);
-            return collection.find(f, FindOptions.limit(offset, pageSize)).size();
+            NitriteFilter f = getFilter(filter);
+            return collection.find(f, FindOptions.skipBy(offset).limit(pageSize)).size();
         });
     }
 
     @Override
-    public int countAll(String collectionName) throws IOException {
+    public long countAll(String collectionName) throws IOException {
         return this.read(() -> {
             NitriteCollection collection = this.getCollection(collectionName);
-            return collection.find().totalCount();
+            return collection.size();
         });
     }
 
@@ -809,8 +854,8 @@ public class NitriteDatabase implements Database<Document> {
     public <T> int remove(T object) throws IOException {
         return this.write(() -> {
             ObjectRepository<T> repo = this.getRepository(object);
-            ObjectFilter filter = ObjectUtils.createUniqueFilter(object, primaryKeyFields.get(object.getClass()));
-            return repo.remove(filter).getAffectedCount();
+            Pair<Object, NitriteFilter> pair = createUniqueFilter(object, primaryKeyFields.get(object.getClass()));
+            return repo.remove(pair.getRight()).getAffectedCount();
         });
     }
 
@@ -823,8 +868,8 @@ public class NitriteDatabase implements Database<Document> {
             }
             int count = 0;
             for (T o : triple.getLeft()) {
-                ObjectFilter filter = ObjectUtils.createUniqueFilter(o, primaryKeyFields.get(o.getClass()));
-                count += triple.getMiddle().remove(filter).getAffectedCount();
+                Pair<Object, NitriteFilter> pair = createUniqueFilter(o, primaryKeyFields.get(o.getClass()));
+                count += triple.getMiddle().remove(pair.getRight()).getAffectedCount();
             }
             return count;
         });
@@ -834,8 +879,8 @@ public class NitriteDatabase implements Database<Document> {
     public <T> int removeAll(Filter filter, Class<T> clazz) throws IOException {
         return this.write(() -> {
             ObjectRepository<T> repo = this.getRepository(clazz);
-            ObjectFilter of = getObjectFilter(filter);
-            return repo.remove(of).getAffectedCount();
+            NitriteFilter f = getFilter(filter);
+            return repo.remove(f).getAffectedCount();
         });
     }
 
@@ -863,153 +908,112 @@ public class NitriteDatabase implements Database<Document> {
     public int removeAll(String collectionName, Filter filter) throws IOException {
         return this.write(() -> {
             NitriteCollection collection = this.getCollection(collectionName);
-            org.dizitart.no2.Filter f = getFilter(filter);
+            NitriteFilter f = getFilter(filter);
             return collection.remove(f).getAffectedCount();
         });
     }
 
-    private ObjectFilter[] getAllObjectFilterChildren(Deque<Filter.FilterElement> filterChain) {
-        List<ObjectFilter> children = new ArrayList<>();
-        while (!filterChain.isEmpty()) {
-            ObjectFilter next = getObjectFilter(filterChain);
-            if (next == ObjectFilters.ALL) {
-                break;
-            }
-            children.add(next);
-        }
-        ObjectFilter[] arr = new ObjectFilter[children.size()];
-        return children.toArray(arr);
-    }
-
-    private ObjectFilter getObjectFilter(Deque<Filter.FilterElement> filterChain) {
-        if (filterChain.isEmpty()) {
-            return ObjectFilters.ALL;
-        }
-        Filter.FilterElement element = filterChain.pop();
-        return switch (element.filterType) {
-            case AND -> ObjectFilters.and(getAllObjectFilterChildren(filterChain));
-            case OR -> ObjectFilters.or(getAllObjectFilterChildren(filterChain));
-            case NOT -> ObjectFilters.not(getObjectFilter(filterChain));
-            case EQ -> ObjectFilters.eq(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values[0]
-            );
-            case GT -> ObjectFilters.gt(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values[0]
-            );
-            case GTE -> ObjectFilters.gte(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values[0]
-            );
-            case LT -> ObjectFilters.lt(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values[0]
-            );
-            case LTE -> ObjectFilters.lte(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values[0]
-            );
-            case TEXT -> ObjectFilters.text(
-                    ((Filter.FieldFilterElement) element).field,
-                    (String) ((Filter.FieldFilterElement) element).values[0]
-            );
-            case REGEX -> ObjectFilters.regex(
-                    ((Filter.FieldFilterElement) element).field,
-                    (String) ((Filter.FieldFilterElement) element).values[0]
-            );
-            case IN -> ObjectFilters.in(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values
-            );
-            case NOT_IN -> ObjectFilters.notIn(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values
-            );
-            case ELEM_MATCH -> ObjectFilters.elemMatch(
-                    ((Filter.FieldFilterElement) element).field,
-                    getObjectFilter(filterChain)
-            );
-            default -> ObjectFilters.ALL;
-        };
-    }
-
-    private org.dizitart.no2.Filter[] getAllFilterChildren(Deque<Filter.FilterElement> filterChain) {
-        List<org.dizitart.no2.Filter> children = new ArrayList<>();
-        while (!filterChain.isEmpty()) {
-            org.dizitart.no2.Filter next = getFilter(filterChain);
-            if (next == Filters.ALL) {
-                break;
-            }
-            children.add(next);
-        }
-        org.dizitart.no2.Filter[] arr = new org.dizitart.no2.Filter[children.size()];
-        return children.toArray(arr);
-    }
-
-    private org.dizitart.no2.Filter getFilter(Deque<Filter.FilterElement> filterChain) {
-        if (filterChain.isEmpty()) {
-            return Filters.ALL;
-        }
-        Filter.FilterElement element = filterChain.pop();
-        return switch (element.filterType) {
-            case AND -> Filters.and(getAllFilterChildren(filterChain));
-            case OR -> Filters.or(getAllFilterChildren(filterChain));
-            case NOT -> Filters.not(getFilter(filterChain));
-            case EQ -> Filters.eq(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values[0]
-            );
-            case GT -> Filters.gt(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values[0]
-            );
-            case GTE -> Filters.gte(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values[0]
-            );
-            case LT -> Filters.lt(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values[0]
-            );
-            case LTE -> Filters.lte(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values[0]
-            );
-            case TEXT -> Filters.text(
-                    ((Filter.FieldFilterElement) element).field,
-                    (String) ((Filter.FieldFilterElement) element).values[0]
-            );
-            case REGEX -> Filters.regex(
-                    ((Filter.FieldFilterElement) element).field,
-                    (String) ((Filter.FieldFilterElement) element).values[0]
-            );
-            case IN -> Filters.in(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values
-            );
-            case NOT_IN -> Filters.notIn(
-                    ((Filter.FieldFilterElement) element).field,
-                    ((Filter.FieldFilterElement) element).values
-            );
-            case ELEM_MATCH -> Filters.elemMatch(
-                    ((Filter.FieldFilterElement) element).field,
-                    getFilter(filterChain)
-            );
-            default -> Filters.ALL;
-        };
+    @Override
+    public <T> void onInsert(Class<T> clazz, Consumer<T> listener, String... withOptionalFields) throws IOException {
+        registerListener(EventType.Insert, clazz, listener, withOptionalFields);
     }
 
     @Override
-    @SuppressWarnings("unchecked")
-    public ObjectFilter getObjectFilter(Filter filter) {
-        return getObjectFilter(new ArrayDeque<>(filter.filterChain));
+    public void onInsert(String collectionName, Consumer<Document> listener, String... withOptionalFields) throws IOException {
+        registerListener(EventType.Insert, collectionName, listener, withOptionalFields);
     }
 
     @Override
+    public <T> void onUpdate(Class<T> clazz, Consumer<T> listener, String... withOptionalFields) throws IOException {
+        registerListener(EventType.Update, clazz, listener, withOptionalFields);
+    }
+
+    @Override
+    public void onUpdate(String collectionName, Consumer<Document> listener, String... withOptionalFields) throws IOException {
+        registerListener(EventType.Update, collectionName, listener, withOptionalFields);
+    }
+
+    @Override
+    public <T> void onRemove(Class<T> clazz, Consumer<T> listener, String... withOptionalFields) throws IOException {
+        registerListener(EventType.Remove, clazz, listener, withOptionalFields);
+    }
+
+    @Override
+    public void onRemove(String collectionName, Consumer<Document> listener, String... withOptionalFields) throws IOException {
+        registerListener(EventType.Remove, collectionName, listener, withOptionalFields);
+    }
+
+    private <T> void registerListener(EventType eventType, Class<T> clazz, Consumer<T> listener, String[] withOptionalFields) throws IOException {
+        getRepository(clazz).subscribe(eventInfo -> {
+            if (eventInfo.getEventType().equals(eventType)) {
+                Document doc = (Document) eventInfo.getItem();
+                if (doc != null) {
+                    listener.accept(maybeProject(clazz, doc, withOptionalFields));
+                }
+            }
+        });
+    }
+
+    private void registerListener(EventType eventType, String collectionName, Consumer<Document> listener, String[] withOptionalFields) throws IOException {
+        getCollection(collectionName).subscribe(eventInfo -> {
+            if (eventInfo.getEventType().equals(eventType)) {
+                Document doc = (Document) eventInfo.getItem();
+                if (doc != null) {
+                    listener.accept(maybeProjectDocument(collectionName, doc, withOptionalFields));
+                }
+            }
+        });
+    }
+
+
+
+    @Override
     @SuppressWarnings("unchecked")
-    public org.dizitart.no2.Filter getFilter(Filter filter) {
-        return getFilter(new ArrayDeque<>(filter.filterChain));
+    public NitriteFilter getFilter(Filter filter) {
+        Filter.FilterNode root = (filter instanceof Filter.FilterClause) ? (Filter.FilterNode) filter : filter.getParent();
+        while (root.getParent() != null) {
+            root = root.getParent();
+        }
+        return filterRecursion(root);
+    }
+
+    private NitriteFilter addLiteralRecursive(Filter.FilterNode[] children, int index, NitriteFilter nf, Filter.FilterClause.Type type) {
+        if (index < 0) {
+            return nf;
+        } else if (nf == null) {
+            nf = filterRecursion(children[index]);
+        } else if (type == Filter.FilterClause.Type.AND) {
+            nf = (NitriteFilter) filterRecursion(children[index]).and(nf);
+        } else if (type == Filter.FilterClause.Type.OR) {
+            nf = (NitriteFilter) filterRecursion(children[index]).or(nf);
+        } else {
+            throw new IllegalArgumentException();
+        }
+        return addLiteralRecursive(children, index - 1, nf, type);
+    }
+
+    private NitriteFilter filterRecursion(Filter.FilterNode node) {
+        if (node instanceof Filter.FilterLiteral literal) {
+            return switch (literal.getType()) {
+                case EQ -> FluentFilter.where(literal.getField()).eq(literal.getValues()[0]);
+                case NOT_EQ -> FluentFilter.where(literal.getField()).notEq(literal.getValues()[0]);
+                case GT -> FluentFilter.where(literal.getField()).gt((Comparable<?>) literal.getValues()[0]);
+                case GTE -> FluentFilter.where(literal.getField()).gte((Comparable<?>) literal.getValues()[0]);
+                case LT -> FluentFilter.where(literal.getField()).lt((Comparable<?>) literal.getValues()[0]);
+                case LTE -> FluentFilter.where(literal.getField()).lte((Comparable<?>) literal.getValues()[0]);
+                case BETWEEN -> FluentFilter.where(literal.getField()).between((Comparable<?>) literal.getValues()[0], (Comparable<?>) literal.getValues()[1], (boolean) literal.getValues()[2], (boolean) literal.getValues()[3]);
+                case TEXT -> FluentFilter.where(literal.getField()).text((String) literal.getValues()[0]);
+                case REGEX -> FluentFilter.where(literal.getField()).regex((String) literal.getValues()[0]);
+                case IN -> FluentFilter.where(literal.getField()).in(Arrays.stream(literal.getValues()).map(o -> (Comparable<?>) o).toArray(Comparable[]::new));
+                case NOT_IN -> FluentFilter.where(literal.getField()).notIn(Arrays.stream(literal.getValues()).map(o -> (Comparable<?>) o).toArray(Comparable[]::new));
+                case ELEM_MATCH -> FluentFilter.where(literal.getField()).elemMatch(filterRecursion((Filter.FilterNode) literal.getValues()[0]));
+            };
+        } else if (node instanceof Filter.FilterClause clause) {
+            Filter.FilterNode[] children = clause.getChildren();
+            return addLiteralRecursive(children, children.length - 1, null, clause.getType());
+        } else {
+            throw new IllegalArgumentException(node.getClass().getName());
+        }
     }
 
     public static Optional<Object> getPrimaryKeyValue(Object object, Field field) throws IOException {
@@ -1035,13 +1039,13 @@ public class NitriteDatabase implements Database<Document> {
             }
             return Optional.of(value);
         } catch (IllegalAccessException iae) {
-            throw new IOException(ID_FIELD_IS_NOT_ACCESSIBLE.getMessage());
+            throw new IOException("id field is not accessible");
         }
     }
 
-    private static Pair<Object, ObjectFilter> createUniqueFilter(Object object, Field field) throws IOException {
-        Object value = getPrimaryKeyValue(object, field).orElseThrow(() -> new IOException(ID_FILTER_VALUE_CAN_NOT_BE_NULL.getMessage()));
-        return Pair.of(value, eq(field.getName(), value));
+    private static Pair<Object, NitriteFilter> createUniqueFilter(Object object, Field field) throws IOException {
+        Object value = getPrimaryKeyValue(object, field).orElseThrow(() -> new IOException("id can not be null"));
+        return Pair.of(value, FluentFilter.where(field.getName()).eq(value));
     }
 
 }
